--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Home</a>
+            <a href="index.html" class="logo">About Me</a>
         </header>
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
                 <li class="active"><a href="index.html">About Me</a></li>
-                <li><a href="generic.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="elements.html">Elements Reference</a></li>
             </ul>
             <ul class="icons">
