added hyperlinks to my social media

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <li><a href="elements.html">Elements Reference</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://www.instagram.com/umm.rohan" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="https://github.com/rohan3123" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
 
