--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h2><a href="#">I love to<br /> build stuff</a></h2>
                     <p>I started playing with computers when I was 9 years-old. Since then I have been tinkering with software and technologies that in some way had led me to work on music, electric engineering, automation, digital art and 3D modeling.</p>
 
+                    <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
                 </header>
                 </ul>
 
