--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <!-- Intro -->
         <div id="intro">
-            <h1>This is<br /> Rohan
+            <h1>Rohan Gazi
             </h1>
-            <p>A Software Engineer and Programmer.</p>
+            <p>Full-Stack Software Engineer.</p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
@@ -53,10 +53,9 @@
             <!-- About me -->
             <article class="About me">
                 <header class="major">
-                    <span class="date">Born on the 30th of June</span>
                     <h2><a href="#">I love to<br /> build stuff</a></h2>
-                    <p>I started playing with computers when I was 9 years-old. Since then I have been tinkering with software and technologies that in some way had led me to work on music, electric engineering, automation, digital art and 3D modeling.</p>
-
+                    <p>I am an <strong>enthusiastic</strong> developer with an <strong>addiction</strong> for discovering new coding perspectives. I am also skilled in <strong>electric engineering</strong>, <strong>automation</strong>, <strong>digital art</strong>, and <strong>3D modeling</strong>. These are things I work on as a hobby.</p>
+                    
                     <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
                 </header>
                 </ul>
