updated projects page to inlude text overlay

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <article class="About me">
                 <header class="major">
                     <h2><a href="#">I love to<br /> build stuff</a></h2>
-                    <p>I am an <strong>enthusiastic</strong> developer with an <strong>addiction</strong> for discovering new coding perspectives. I am also skilled in <strong>electric engineering</strong>, <strong>automation</strong>, <strong>digital art</strong>, and <strong>3D modeling</strong>. These are things I work on as a hobby.</p>
+                    <p>I am an <strong>ENTHUSIASTIC</strong> developer with an <strong>ADDICTION</strong> for discovering new coding perspectives. I am also skilled in <strong>electric engineering</strong>, <strong>automation</strong>, <strong>digital art</strong>, and <strong>3D modeling</strong>. These are things I work on as a hobby.</p>
                     
-                    <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+                    <button onclick="window.open('CV.pdf', '_blank')">View CV</button>
                 </header>
                 </ul>
 
@@ -64,6 +64,7 @@
             <!-- Skills -->
             <section class="Skills">
                 <h2><a href="#">My Skills</a></h2>
+                <p>I'm a <strong>ENTHUSIASTIC</strong> learner here's a couple of <strong>languages</strong> I've worked with:</p>
                 <style>
                     .skill-box {
                         display: inline-block;
