removed clickable text on index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2>I love to<br /> build stuff</h2>
                     <li><span class="first-block">Full Name:</span><span class="second-block">Rohan Gazi</span></li>
                     <li><span class="first-block">Email:</span><span class="second-block">rohangazi30@gmail.com</span></li>
-                    <li><span class="first-block">University:</span><span class="second-block">Nottingham</span></li>
+                    <li><span class="first-block">University:</span><span class="second-block">Nottingham Trent</span></li>
                     <div class="row">
                         <div class="col-md-8">
                             <p>I am an <strong>ENTHUSIASTIC</strong> developer with an <strong>ADDICTION</strong> for discovering new coding perspectives. I am also skilled in electric engineering, automation, digital art, and 3D modeling. These are things I work on as a hobby. </p>
@@ -72,7 +72,7 @@
             </article>
             <!-- Skills -->
             <section class="Skills">
-                <h2><a href="#">My Skills</a></h2>
+                <h2>My Skills</h2>
                 <p>I'm a <strong>ENTHUSIASTIC</strong> learner here's a couple of <strong>languages</strong> I've worked with:</p>
                 <style>
                     .skill-box {
@@ -170,7 +170,7 @@
             <!-- Posts -->
             <section class="posts">
                 <header>
-                    <h2><a href="#">Art I've Made</a></h2>
+                    <h2>Art I've Made</h2>
                     <p>I have a passion for digital art and like to draw in my spare time to express my creativity.</p>
                 </header>
                 <article>
