added github tasks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Rohan Gazi</strong> <br> Full-Stack Software Engineer</h1>
+					<h1><strong>Rohan Gazi</strong> <br> Full-Stack Software Developer</h1>
 				</div>
 			</header>
 
@@ -25,7 +25,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am an <strong>ENTHUSIASTIC</strong> developer with an <strong>ADDICTION</strong> for discovering new coding perspectives. I am also skilled in electric engineering, automation, digital art, and 3D modeling. These are things I work on as a hobby. </p>
+						<p>I am an <strong>ENTHUSIASTIC</strong> developer with an addiction for discovering new coding perspectives. Besides focusing on my <strong>COMPUTER SCIENCE</strong> course I am also skilled in cloud computing, automation, digital art, and 3D modeling. These are things I work on as a hobby. My goal is to be a fully realized full stack developer.</p>
                             
 						<ul class="actions">
 							<a href="#" class="button" onclick="window.open('CV.pdf', '_blank')">View CV</a>
@@ -37,7 +37,7 @@
 					<header class="major">
 						<h2>Skills</h2>
 					</header>
-					<p>I'm a <strong>ENTHUSIASTIC</strong> learner here's a couple of <strong>languages</strong> I've worked with:</p>
+					<p>I'm a <strong>ENTHUSIASTIC</strong> learner here's a couple of <strong>tools and languages</strong> I've worked with:</p>
                 <style>
                     .skill-box {
                         display: inline-block;
@@ -95,13 +95,13 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>bruh</h3>
-								<p>bruh</p>
+								<h3>Rotor system</h3>
+								<p>A rotor system that makes use of SQLite and tomcat server hosting to assign registered employees hours they must work.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>bruh</h3>
-								<p>bruh</p>
+								<h3>Tesco uniform recognition system</h3>
+								<p>A recognition system that makes use of machine learning models to regonise the Tesco uniform on camera</p>
 							</article>
 							
 						</div>
