--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<p>I am an <strong>ENTHUSIASTIC</strong> developer with an addiction for discovering new coding perspectives. Besides focusing on my <strong>COMPUTER SCIENCE</strong> course I am also skilled in cloud computing, automation, digital art, and 3D modeling. These are things I work on as a hobby. My goal is to be a fully realized full stack developer.</p>
                             
 						<ul class="actions">
-							<a href="#" class="button" onclick="window.open('CV.pdf', '_blank')">View CV</a>
+							<a href="#" class="button" onclick="window.open('Rohan Gazi.pdf', '_blank')">View CV</a>
 						</ul>
 					</section>
 
