--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Rohan Gazi</strong> <br> Full-Stack Software Developer</h1>
+					<h1><strong>Rohan Gazi</strong> <br> Computer Science Graduate</h1>
 				</div>
 			</header>
 
@@ -25,7 +25,11 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am an <strong>ENTHUSIASTIC</strong> developer with an addiction for discovering new coding perspectives. Besides focusing on my <strong>COMPUTER SCIENCE</strong> course I am also skilled in cloud computing, automation, digital art, and 3D modeling. These are things I work on as a hobby. My goal is to be a fully realized full stack developer.</p>
+						<p>I am highly <strong>MOTIVATED</strong> Computer Science BSc graduate from Nottingham Trent University, equipped with a solid 
+							foundation in <strong>AI, CLOUD COMPUTING,</strong> and <strong>SOFTWARE ENGINEERING.</strong> Demonstrated proficiency in programming 
+							through participation in GameJam, IBM, Development Society events and university projects. Excelling in 
+							teamwork and demonstrating adaptability in diverse environments. Eager to apply academic knowledge and 
+							technical skills to real world challenges.</p>
                             
 						<ul class="actions">
 							<a href="#" class="button" onclick="window.open('Rohan Gazi.pdf', '_blank')">View CV in pdf</a>
@@ -55,27 +59,7 @@
                 </style>
 
                 <div class="skill-box">
-                    <div class="skill-name">HTML5</div>
-                </div>
-
-                <div class="skill-box">
-                    <div class="skill-name">CSS3</div>
-                </div>
-
-                <div class="skill-box">
-                    <div class="skill-name">JavaScript</div>
-                </div>
-
-                <div class="skill-box">
                     <div class="skill-name">Java</div>
-                </div>
-
-                <div class="skill-box">
-                    <div class="skill-name">C#</div>
-                </div>
-
-                <div class="skill-box">
-                    <div class="skill-name">Python</div>
                 </div>
 
                 <div class="skill-box">
@@ -83,7 +67,31 @@
                 </div>
 
                 <div class="skill-box">
-                    <div class="skill-name">SQlite</div>
+                    <div class="skill-name">Python</div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-name">HTML5</div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-name">C#</div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-name">SQL</div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-name">GitHub</div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-name">VS code</div>
+                </div>
+
+				<div class="skill-box">
+                    <div class="skill-name">Android Studio</div>
                 </div>
 				</section>
 
