--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="blog">Portfolio</a></li>
-						<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn"><span>LinkedIn</span></a></li>
-						<li><a href="https://www.instagram.com/umm.rohan" class="btn btn-primary btn-learn"><span>Instagram</span></a></li>
-						<li><a href="https://github.com/rohan3123" class="btn btn-primary btn-learn"><span>GitHub</span></a></li>
 					</ul>
 				</div>
 			</nav>
 
+			<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn"><span>LinkedIn</span></a> <a href="https://github.com/rohan3123" class="btn btn-primary btn-learn"><span>GitHub</span></a></li>
 
 		</aside>
 
