--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
 					</ul>
 				</div>
 			</nav>
+			
+			<div class="colorlib-footer">
+				<ul>
+					<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn" target="_blank"><span>LinkedIn</span></a></li>
+					<li><a href="https://github.com/rohan3123" class="btn btn-primary btn-learn" target="_blank"><span>GitHub</span></a></li>
+				</ul>
+			</div>
 
-			<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn"><span>LinkedIn</span></a> <a href="https://github.com/rohan3123" class="btn btn-primary btn-learn"><span>GitHub</span></a></li>
 
 		</aside>
 
