--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			
 			<div class="colorlib-footer">
 				<ul>
-					<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn" target="_blank"><span>LinkedIn</span></a></li>
-					<li><a href="https://github.com/rohan3123" class="btn btn-primary btn-learn" target="_blank"><span>GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/rohan-gazi-b33485256/" class="btn btn-primary btn-learn" target="_blank" style="color: black;"><span>LinkedIn</span></a></li>
+					<li><a href="https://github.com/rohan3123" class="btn btn-primary btn-learn" target="_blank" style="color: black;"><span>GitHub</span></a></li>
 				</ul>
 			</div>
 
