font colour change

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<p><a href="#" class="btn btn-primary btn-lg btn-load-more" onclick="window.open('https://github.com/rohan3123')">GitHub <i></i></a></p>
+							<p><a href="#" class="btn btn-primary btn-lg btn-load-more" onclick="window.open('https://github.com/rohan3123')" style="color: black;">GitHub <i></i></a></p>
 						</div>
 					</div>
 				</div>
