fixed image links

--- a/index.html
+++ b/index.html
@@ -249,27 +249,27 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/rohan3123/Rotor-algorithm-" target="_blank" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a href="https://github.com/rohan3123/Rotor-algorithm-" target="_blank">Rotor system</a></h3>
+									<h3><a>Rotor system</a></h3>
 									<p>A rotor system that makes use of SQLite and Tomcat server hosting to assign registered employees hours they must work.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/rohan3123/tesco-uniform-recognition" target="_blank" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a href="https://github.com/rohan3123/tesco-uniform-recognition" target="_blank">Tesco uniform recognition system</a></h3>
+									<h3><a>Tesco uniform recognition system</a></h3>
 									<p>A recognition system that makes use of machine learning models to recognize the Tesco uniform on camera.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/rohan3123/calculator-html" target="_blank" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a href="https://github.com/rohan3123/calculator-html" target="_blank">Calculator HTML</a></h3>
+									<h3><a>Calculator HTML</a></h3>
 									<p>A calculator made using HTML.</p>
 								</div>
 							</div>
