--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Specialty</span>
 							<h2 class="colorlib-heading animate-box">My Skills</h2>
 						</div>
 					</div>
@@ -185,7 +184,6 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Education</span>
 							<h2 class="colorlib-heading animate-box">Education</h2>
 						</div>
 					</div>
@@ -243,7 +241,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Portfolio</span>
-							<h2 class="colorlib-heading">Best Work</h2>
+							<h2 class="colorlib-heading">My Best Work</h2>
 						</div>
 					</div>
 					<div class="row">
