--- a/index.html
+++ b/index.html
@@ -247,28 +247,28 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://github.com/rohan3123/Rotor-algorithm-" target="_blank" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive"></a>
+								<a href="https://github.com/rohan3123/Face-detection-system" target="_blank" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a>Rotor system</a></h3>
-									<p>A rotor system that makes use of SQLite and Tomcat server hosting to assign registered employees hours they must work.</p>
+									<h3><a>Face detection system</a></h3>
+									<p>Final year project that uses Open CV to detect faces identify features and encrypt and save them locally to the device.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="https://github.com/rohan3123/tesco-uniform-recognition" target="_blank" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive"></a>
+								<a href="https://github.com/rohan3123/Minecraft-fried-egg-mod" target="_blank" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a>Tesco uniform recognition system</a></h3>
-									<p>A recognition system that makes use of machine learning models to recognize the Tesco uniform on camera.</p>
+									<h3><a>Minecraft Mod</a></h3>
+									<p>A Minecraft game mod that adds fried egg item and other experemental things to the game.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://github.com/rohan3123/calculator-html" target="_blank" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive"></a>
+								<a href="https://github.com/rohan3123/Rotor-algorithm-" target="_blank" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<h3><a>Calculator HTML</a></h3>
-									<p>A calculator made using HTML.</p>
+									<h3><a>Rotor system</a></h3>
+									<p>A cloud based rotor algorithm hosted with Apache Tomcat that uses sql database to assign shifts to staff.</p>
 								</div>
 							</div>
 						</div>
