--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 													</a>
 												</p>
 												<p>
-													<a class="btn btn-primary btn-learn" href="#" onclick="window.open('Rohan Gazi.doc', '_blank')">
+													<a class="btn btn-primary btn-learn" href="#" onclick="window.open('Rohan Gazi.docx', '_blank')">
 														View CV in DOCX <i class="icon-download4"></i>
 													</a>
 												</p>
